Extended pom with more java.ext.dirs=...